tests/pass/0086_bare_return_returns_nothing.ee
fn helper() {
    return;
}

fn main() {
    print(helper());
}
