tests/fail/0015_comment_before_unknown_variable_use.ee
fn main() {
    // Runtime error should still surface with comments present
    print(missing);
}
